# note_crawler

./: get_note_article.py  get_pksha_success.py  pyproject.toml  test.ipynb
data/: 130%成長し続ける組織を支える「自由」とは――飽きる暇などないPKSHAの魅力.txt  AI TECH GUILD に弊社の代表取締役とアルゴリズムリードが登壇します.txt  AIに向き合うことは、人と向き合うこと――豊かなコミュニケーションをめざして加速するソリューション開発.txt  AI王 〜クイズAI日本一決定戦〜 に参加し第3位入賞した話.txt  AWS re:Invent 2022 参加レポート.txt  ICASSP 2023 参加レポート.txt  JSAI2023@KUMAMOTO 参加報告.txt  JaSST ‘23 Tokyo 参加レポート.txt  KAGGLE DAYS X Z BY HP WORLD CHAMPIONSHIP FINAL EVENT参加体験記〜第3位入賞した話〜.txt  KaggleにてGold獲得を果たしたPKSHAチームの挑戦の軌跡.txt  Microsoft Build  2023 参加報告.txt  NLP2023@OKINAWA 参加報告.txt  PKSHA の QA 業務を語りつくす！QA チーム座談会.txt  R&Dと複数プロダクト展開の乗算が共進化を加速させる.txt  YANS 2023 @浅草橋 参加報告.txt  「PKSHAグループ横断のエンジニアLTイベント2023.5.12」フォトレポート.txt  「それアルゴリズムで解決できますよ」ビジネスサイドも参加するPKSHA Conferenceで交わされた対話とは.txt  「もっとわがままでもいい」――個々の想いを束ねて社会価値に変換していくPKSHAの技術力と組織力.txt  「アルゴリズムソリューション×AI SaaS」で広がるソリューションセールスの可能性.txt  「人とAIのコミュニケーション」で健全な社会を作る。PKSHAが不正・犯罪検知ソリューションに取り組む理由とは.txt  「手と口と頭を動かし続けよう」AIテックカンパニーで新卒が成長する要は「情報をシェアして組織のハブになること」だった.txt  「技術×社会」の交点で、異色のバックグラウンドを活かして社会実装に挑む.txt  「研究開発⇄事業化」の好循環サイクルを回す、PKSHA Conference 2022イベントレポート.txt  いまPKSHAが捉えている「未来のソフトウエア」と“共進化”.txt  それぞれの「デルタ」を活かし、高め合えるチームで目指す「お客様の成功」.txt  ほぼ社員として過ごした1ヶ月がPKSHA入社の決め手に。フルリモートでも築けた信頼と成果.txt  みんなで育てるAIチャットボットーーPKSHAが実践する従業員とプロダクトが共進化する働き方とは.txt  インサイドセールスとしての成長を促す、PKSHA Workplaceのカオスで魅力的な環境.txt  エンジニアがやりたいことの受け皿としてのPKSHAとアルゴリズムの進化.txt  エンジニアリングマネージャーから見たPKSHAの魅力とチャレンジ.txt  エンタープライズ×AI SaaSの営業経験から得られた成長と変化.txt  エンタープライズと「三方良し」のビジネスモデルをつくりだせる刺激的な環境.txt  (+26 more)
success_data/: arts_株式会社アーツ.txt  (+80 more)
